<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/content_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_tv"
        android:textSize="@dimen/title_size"
        android:textColor="@android:color/holo_blue_light"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/title">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="16sp"
            android:text="@string/year" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/date"
            android:drawablePadding="-36dp"
            android:textSize="16sp"
            android:textColor="@android:color/holo_blue_light"
            app:drawableEndCompat="@drawable/ic_alarm_svgrepo_com" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:drawableEndCompat="@drawable/ic_label" />
    </LinearLayout>

    <TextView
        android:id="@+id/line"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <CheckBox
        android:id="@+id/check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_design"
        android:layout_below="@+id/line"
        android:checked="true"/>

    <CheckBox
        android:id="@+id/check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client"
        android:layout_below="@id/check1"/>

    <CheckBox
        android:id="@+id/check3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_gift"
        android:layout_below="@id/check2"/>

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner_with_harin"
        android:layout_below="@id/check3"/>

</RelativeLayout>